--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,7 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
         compile "net.bytebuddy:byte-buddy:1.7.8"
+        compile fileTree(dir:'libs',include: '*.jar')
 
         testCompile "junit:junit:4.12"
         testCompile "org.mockito:mockito-all:1.9.5"
