--- a/core/assets/options.properties
+++ b/core/assets/options.properties
@@ -1,5 +1,5 @@
 #
-#Fri Dec 08 14:35:22 CET 2017
-musicvolume=1.0
+#Fri Dec 08 14:46:16 CET 2017
+musicvolume=0.53999996
 resolution=1600x900
 fullscreen=false
