Added pause menu + small fixes
To open pause menu, press ESCAPE or P

--- a/core/assets/options.properties
+++ b/core/assets/options.properties
@@ -1,5 +1,5 @@
 #
-#Fri Dec 08 20:56:12 CET 2017
-musicvolume=0.53999996
+#Mon Dec 11 13:06:14 CET 2017
+musicvolume=0.0
 resolution=1600x900
 fullscreen=false
