--- a/.gitignore
+++ b/.gitignore
@@ -123,4 +123,4 @@ Thumbs.db
 !/ios-moe/xcode/*.xcodeproj/xcshareddata
 !/ios-moe/xcode/*.xcodeproj/project.pbxproj
 /ios-moe/xcode/native/
-login.properties
+core/assets/login.properties
