--- a/core/assets/login.properties
+++ b/core/assets/login.properties
@@ -1,5 +1,5 @@
 #
-#Mon Jan 08 11:56:14 CET 2018
-password=Jurian1998
+#Mon Jan 08 12:49:01 CET 2018
+password=Jorin1999
 remember=true
-username=Jurian
+username=Jorin
