--- a/core/assets/login.properties
+++ b/core/assets/login.properties
@@ -1,5 +1,5 @@
 #
-#Mon Jan 08 13:46:00 CET 2018
-password=Jorin1999
-username=Jorin
-remember=true
+#Mon Dec 18 12:14:17 CET 2017
+password=
+username=
+remember=false
