Fix building staying on mouse

--- a/core/assets/login.properties
+++ b/core/assets/login.properties
@@ -1,5 +1,5 @@
 #
-#Mon Dec 18 12:14:17 CET 2017
-password=
-username=
-remember=false
+#Mon Jan 15 10:58:48 CET 2018
+password=Jurian1998
+remember=true
+username=Jurian
